--- a/Triton-Puzzles.ipynb
+++ b/Triton-Puzzles.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "aN1sj9TrMifV",
       "metadata": {
         "id": "aN1sj9TrMifV"
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "88e71c24-2a2b-4616-9581-4f93eeb2a8f6",
       "metadata": {
         "id": "88e71c24-2a2b-4616-9581-4f93eeb2a8f6"
@@ -197,12 +197,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "fbuIIJkaDyye",
       "metadata": {
-        "id": "fbuIIJkaDyye"
+        "id": "fbuIIJkaDyye",
+        "outputId": "e3fbf35a-a605-4732-f830-c09f2a51348a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 891
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7]\n",
+            "[1. 1. 1. 1. 1. 0. 0. 0.]\n",
+            "* Running on public URL: https://a288419d314f093b76.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://a288419d314f093b76.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
         "@triton.jit\n",
         "def demo(x_ptr):\n",
@@ -228,12 +265,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "_981RFRp4Avz",
       "metadata": {
-        "id": "_981RFRp4Avz"
+        "id": "_981RFRp4Avz",
+        "outputId": "3871adee-34ac-4731-c0c0-70cf27f97425",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]\n",
+            " [12 13 14 15]\n",
+            " [16 17 18 19]\n",
+            " [20 21 22 23]\n",
+            " [24 25 26 27]\n",
+            " [28 29 30 31]]\n",
+            "[[1. 1. 1. 0.]\n",
+            " [1. 1. 1. 0.]\n",
+            " [1. 1. 1. 0.]\n",
+            " [1. 1. 1. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0.]]\n",
+            "* Running on public URL: https://11b8fd1095364749ff.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://11b8fd1095364749ff.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
         "@triton.jit\n",
         "def demo(x_ptr):\n",
@@ -261,12 +349,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "02wXUhMqKbe0",
       "metadata": {
-        "id": "02wXUhMqKbe0"
+        "id": "02wXUhMqKbe0",
+        "outputId": "a4d69061-b414-4615-d30f-4914a7b8c411",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 926
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[10., 10., 10.],\n",
+            "        [10., 10.,  1.],\n",
+            "        [ 1.,  1.,  1.],\n",
+            "        [ 1.,  1.,  1.]])\n",
+            "* Running on public URL: https://1e64c5004bd0009002.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://1e64c5004bd0009002.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
       "source": [
         "@triton.jit\n",
         "def demo(z_ptr):\n",
@@ -291,19 +418,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "l6MczfAsJpJL",
       "metadata": {
-        "id": "l6MczfAsJpJL"
+        "id": "l6MczfAsJpJL",
+        "outputId": "134491b2-b227-4c81-da90-abcccc9af710",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 908
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ True  True  True  True  True  True  True  True]\n",
+            "[ True  True  True  True  True  True  True  True]\n",
+            "[ True  True  True  True False False False False]\n",
+            "* Running on public URL: https://c1597b3f1f4e8a77f9.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://c1597b3f1f4e8a77f9.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
       "source": [
         "@triton.jit\n",
         "def demo(x_ptr):\n",
         "    pid = tl.program_id(0)\n",
         "    range = tl.arange(0, 8) + pid * 8\n",
         "    x = tl.load(x_ptr + range, range < 20)\n",
-        "    print(\"Print for each\", pid, x)\n",
+        "    print((range<20))\n",
         "\n",
         "x = torch.ones(2, 4, 4)\n",
         "triton_viz.trace(demo)[(3, 1, 1)](x)\n",
@@ -347,12 +512,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "3d5fdae5-156e-48e6-abb3-9abe9d258229",
       "metadata": {
-        "id": "3d5fdae5-156e-48e6-abb3-9abe9d258229"
+        "id": "3d5fdae5-156e-48e6-abb3-9abe9d258229",
+        "outputId": "b7854216-5230-4cc0-9467-fefbb935cb40",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x: jaxtyping.Float32[Tensor, '32']\n",
+            "Results match: True\n",
+            "* Running on public URL: https://2d43e40af513a79222.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://2d43e40af513a79222.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correct!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <video alt=\"test\" controls autoplay=1>\n",
+              "        <source src=\"https://openpuppies.com/mp4/pn1e9TO.mp4\"  type=\"video/mp4\">\n",
+              "    </video>\n",
+              "    "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ],
       "source": [
         "def add_spec(x: Float32[Tensor, \"32\"]) -> Float32[Tensor, \"32\"]:\n",
         "    \"This is the spec that you should implement. Uses typing to define sizes.\"\n",
@@ -363,6 +579,8 @@
         "    range = tl.arange(0, B0)\n",
         "    x = tl.load(x_ptr + range)\n",
         "    # Finish me!\n",
+        "    x=x+10\n",
+        "    tl.store(z_ptr + range, x)\n",
         "\n",
         "test(add_kernel, add_spec, nelem={\"N0\": 32}, viz=True)"
       ]
@@ -395,18 +613,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "74baeaed-82d0-4814-b1fc-e9a51237cf7e",
       "metadata": {
-        "id": "74baeaed-82d0-4814-b1fc-e9a51237cf7e"
+        "id": "74baeaed-82d0-4814-b1fc-e9a51237cf7e",
+        "outputId": "c9ebbbb5-4e01-4057-e339-37acb1aa75eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x: jaxtyping.Float32[Tensor, '200']\n",
+            "Results match: True\n",
+            "* Running on public URL: https://f9205a1b15c6b5fb87.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://f9205a1b15c6b5fb87.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correct!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <video alt=\"test\" controls autoplay=1>\n",
+              "        <source src=\"https://openpuppies.com/mp4/F1SChho.mp4\"  type=\"video/mp4\">\n",
+              "    </video>\n",
+              "    "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ],
       "source": [
         "def add2_spec(x: Float32[Tensor, \"200\"]) -> Float32[Tensor, \"200\"]:\n",
         "    return x + 10.\n",
         "\n",
         "@triton.jit\n",
         "def add_mask2_kernel(x_ptr, z_ptr, N0, B0: tl.constexpr):\n",
+        "    pid=tl.program_id(0)\n",
+        "    index=tl.arange(0,B0)+pid*B0\n",
+        "    x=tl.load(x_ptr+index,mask=index<N0)\n",
+        "    x=x+10\n",
+        "    tl.store(z_ptr+index,x,mask=index<N0)\n",
+        "\n",
         "    return\n",
         "\n",
         "test(add_mask2_kernel, add2_spec, nelem={\"N0\": 200})"
@@ -442,18 +717,143 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "5a977409-3fcb-4b72-abee-f09d02bf6f70",
       "metadata": {
-        "id": "5a977409-3fcb-4b72-abee-f09d02bf6f70"
+        "id": "5a977409-3fcb-4b72-abee-f09d02bf6f70",
+        "outputId": "4bb90eb9-d84a-4a93-a07b-7b1f5978ab84",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x: jaxtyping.Float32[Tensor, '32']\n",
+            "y: jaxtyping.Float32[Tensor, '32']\n",
+            "[[   0    1    2 ...   29   30   31]\n",
+            " [  32   33   34 ...   61   62   63]\n",
+            " [  64   65   66 ...   93   94   95]\n",
+            " ...\n",
+            " [ 928  929  930 ...  957  958  959]\n",
+            " [ 960  961  962 ...  989  990  991]\n",
+            " [ 992  993  994 ... 1021 1022 1023]]\n",
+            "Z=: [[-0.32783324 -0.05586803 -0.7356124  ... -0.45067245 -0.5189898\n",
+            "   0.10791057]\n",
+            " [-0.23390985  0.03805536 -0.641689   ... -0.35674906 -0.4250664\n",
+            "   0.20183396]\n",
+            " [-0.35306364 -0.08109844 -0.7608428  ... -0.47590286 -0.5442202\n",
+            "   0.08268017]\n",
+            " ...\n",
+            " [ 0.1973368   0.469302   -0.21044236 ...  0.07449758  0.00618023\n",
+            "   0.6330806 ]\n",
+            " [-0.29991966 -0.02795446 -0.7076988  ... -0.42275888 -0.49107623\n",
+            "   0.13582414]\n",
+            " [ 0.14731014  0.41927534 -0.26046902 ...  0.02447093 -0.04384643\n",
+            "   0.58305395]]\n",
+            "X=: [[-0.00374341  0.2682218  -0.41152257 -0.3679695  -0.19257718  0.13407868\n",
+            "  -0.00990659  0.39644474 -0.04437202  0.13230628 -0.15110654 -0.09828269\n",
+            "  -0.47767425 -0.33114105 -0.20611155  0.01852179  0.1976676   0.3000114\n",
+            "  -0.33897054 -0.21773142  0.18160856  0.41519397 -0.10290009  0.37415588\n",
+            "  -0.08059168  0.05290705  0.4527381  -0.46383518 -0.31476897 -0.12658262\n",
+            "  -0.19489998  0.4320004 ]]\n",
+            "Y=: [[-0.32408983]\n",
+            " [-0.23016644]\n",
+            " [-0.34932023]\n",
+            " [-0.4682805 ]\n",
+            " [-0.29187024]\n",
+            " [ 0.42979902]\n",
+            " [ 0.22310919]\n",
+            " [ 0.24233627]\n",
+            " [ 0.02629578]\n",
+            " [-0.25634176]\n",
+            " [ 0.08459234]\n",
+            " [-0.46684736]\n",
+            " [-0.36128312]\n",
+            " [-0.257765  ]\n",
+            " [ 0.31546897]\n",
+            " [ 0.29316062]\n",
+            " [-0.22174752]\n",
+            " [-0.01804119]\n",
+            " [ 0.31978035]\n",
+            " [ 0.49706656]\n",
+            " [ 0.19844109]\n",
+            " [ 0.06754643]\n",
+            " [ 0.33524317]\n",
+            " [-0.29440117]\n",
+            " [ 0.09317201]\n",
+            " [-0.38765275]\n",
+            " [-0.34654307]\n",
+            " [-0.25829178]\n",
+            " [ 0.22623652]\n",
+            " [ 0.2010802 ]\n",
+            " [-0.29617625]\n",
+            " [ 0.15105355]]\n",
+            "Results match: False\n",
+            "* Running on public URL: https://80c0a24b2ef94a4884.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://80c0a24b2ef94a4884.gradio.live\" width=\"100%\" height=\"800\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Invalid Access: {}\n",
+            "Yours: tensor([[-0.3278, -0.2339, -0.3531,  ...,  0.1973, -0.2999,  0.1473],\n",
+            "        [-0.0559,  0.0381, -0.0811,  ...,  0.4693, -0.0280,  0.4193],\n",
+            "        [-0.7356, -0.6417, -0.7608,  ..., -0.2104, -0.7077, -0.2605],\n",
+            "        ...,\n",
+            "        [-0.4507, -0.3567, -0.4759,  ...,  0.0745, -0.4228,  0.0245],\n",
+            "        [-0.5190, -0.4251, -0.5442,  ...,  0.0062, -0.4911, -0.0438],\n",
+            "        [ 0.1079,  0.2018,  0.0827,  ...,  0.6331,  0.1358,  0.5831]])\n",
+            "Spec: tensor([[-0.3278, -0.0559, -0.7356,  ..., -0.4507, -0.5190,  0.1079],\n",
+            "        [-0.2339,  0.0381, -0.6417,  ..., -0.3567, -0.4251,  0.2018],\n",
+            "        [-0.3531, -0.0811, -0.7608,  ..., -0.4759, -0.5442,  0.0827],\n",
+            "        ...,\n",
+            "        [ 0.1973,  0.4693, -0.2104,  ...,  0.0745,  0.0062,  0.6331],\n",
+            "        [-0.2999, -0.0280, -0.7077,  ..., -0.4228, -0.4911,  0.1358],\n",
+            "        [ 0.1473,  0.4193, -0.2605,  ...,  0.0245, -0.0438,  0.5831]])\n",
+            "tensor([[ True, False, False,  ..., False, False, False],\n",
+            "        [False,  True, False,  ..., False, False, False],\n",
+            "        [False, False,  True,  ..., False, False, False],\n",
+            "        ...,\n",
+            "        [False, False, False,  ...,  True, False, False],\n",
+            "        [False, False, False,  ..., False,  True, False],\n",
+            "        [False, False, False,  ..., False, False,  True]])\n"
+          ]
+        }
+      ],
       "source": [
         "def add_vec_spec(x: Float32[Tensor, \"32\"], y: Float32[Tensor, \"32\"]) -> Float32[Tensor, \"32 32\"]:\n",
         "    return x[None, :] + y[:, None]\n",
         "\n",
         "@triton.jit\n",
         "def add_vec_kernel(x_ptr, y_ptr, z_ptr, N0, N1, B0: tl.constexpr, B1: tl.constexpr):\n",
+        "    x_index=tl.arange(0,B0)[None,:]\n",
+        "    y_index=tl.arange(0,B1)[:,None]\n",
+        "    x=tl.load(x_ptr+x_index)\n",
+        "    y=tl.load(y_ptr+y_index)\n",
+        "    print(y_index*B0+x_index)\n",
+        "    z=x+y\n",
+        "    print(\"Z=:\",z)\n",
+        "    print(\"X=:\",x)\n",
+        "    print(\"Y=:\",y)\n",
+        "\n",
+        "    tl.store(z_ptr+x_index*B1+y_index,z)\n",
         "    return\n",
         "\n",
         "test(add_vec_kernel, add_vec_spec, nelem={\"N0\": 32, \"N1\": 32})"
